--- a/app/views/grades/group_edit.html.haml
+++ b/app/views/grades/group_edit.html.haml
@@ -17,6 +17,7 @@
   = simple_form_for :grade, :url => group_grade_assignment_path(@assignment), :html => { :method => :put} do |f|
     = hidden_field_tag "group_id", @group.id
     = f.hidden_field :graded_by_id, :value => current_user.id
+    = f.hidden_field :instructor_modified, :value => true
 
     Score:
     = label_tag do
@@ -38,5 +39,5 @@
 
     .submit-buttons
       %ul
-        %li= f.button :submit, @submit_message
+        %li= f.button :submit, "Submit Grades", :class => "button"
         %li= link_to 'Cancel', assignment_path(@assignment), :class => 'button'
