--- a/app/views/assignments/group/_table_body.html.haml
+++ b/app/views/assignments/group/_table_body.html.haml
@@ -1,36 +1,39 @@
 - @groups.each do |group|
-  - grade = @assignment.grades.find_by group_id: group
-  %tr
-    - if @assignment.release_necessary?
+  - group.students.each do |student|
+    %tr
+      %td= link_to group.name, group
+      - grade = @assignment.grades.find_by student_id: student
+      %td= link_to student.first_name, student_path(student)
+      %td= link_to student.last_name, student_path(student)
       %td
-        - if grade
-          = check_box_tag "grade_ids[]", grade.id
-    %td= link_to group.name, group
-    %td
-      - if grade
-        = grade.score
-    - if @assignment.assignment_type.student_weightable?
-      %td= "Multiplied Score"
-    - if @assignment.has_levels?
+        - if grade.present? && grade.instructor_modified?
+          = points grade.raw_score
       %td
-        - if grade
-          = @assignment.grade_level(grade)
-    %td
-      - group.earned_badges.each do |badge|
-        %img{:src => badge.try(:icon), :alt => badge.try(:name), :width => 40}
-    - if @assignment.release_necessary?
-      %td= grade.try(:status)
-    - if @assignment.accepts_submissions?
+        - if grade.present?
+          - if grade.feedback_read?
+            %i.fa.fa-check
+          - elsif grade.feedback_reviewed?
+            %i.fa.fa-eye
+      - if @assignment.assignment_type.student_weightable?
+        %td= points grade.score if grade
+      - if @assignment.has_levels?
+        %td
+          - if grade
+            = @assignment.grade_level(grade)
       %td
-        - group.submission_for_assignment(@assignment).tap do |submission|
-          - if submission && grade
-            = link_to "See Submission", assignment_grade_path(@assignment.id, :group_id => group.id), :class => "button"
-          - elsif submission
-            = link_to "See Submission", assignment_grade_path(@assignment.id, :group_id => group.id), :class => "button"
-          - else
-            = link_to "Submit", new_assignment_submission_path(@assignment, @submission, :group_id => group.id), :class => "button"
-    %td
-      - if grade
-        = link_to "See Grade", assignment_grade_path(@assignment.id, grade.id, :group_id => group.id), :class => "button"
-      - else
-        = link_to 'Grade', group_grade_assignment_path(:assignment_id => @assignment.id, :group_id => group.id), :class => "button"
+        .right
+          %ul.button-bar
+            - group.submission_for_assignment(@assignment).tap do |submission|
+              - if submission
+                %li= link_to "See Submission", assignment_grade_path(@assignment.id, :group_id => group.id), :class => 'button'
+              - else
+                %li= link_to "Submit", new_assignment_submission_path(@assignment, @submission, :group_id => group.id), :class => 'button'
+            - if group.students.first.grade_for_assignment(@assignment).present? && group.students.first.grade_for_assignment(@assignment).is_graded?
+              %li= link_to "Edit #{term_for :group} Grade", group_grade_assignment_path(@assignment, :group_id => group), :class => 'button'
+            - else
+              %li= link_to "Grade #{term_for :group}", group_grade_assignment_path(@assignment, :group_id => group), :class => 'button'
+      - if @assignment.release_necessary?
+        %td= grade.try(:status)
+        %td.right
+          - if grade && grade.is_graded?
+            = check_box_tag "grade_ids[]", grade.id
