--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -53,10 +53,11 @@
       %h4 Instructor Feedback:
       %p= raw @group.try(:text_feedback)
 
-    - i = 1
-    - @group.proposals.order_by_creation_date.each do |p|
-      .panel
-        %h4.bold= "Proposal ##{i}: #{p.title}"
-        %h6= "Created: #{p.created_at}"
-        %p= p.proposal
-      - i += 1
+    - if @group.proposals.present?
+      - i = 1
+      - @group.proposals.order_by_creation_date.each do |p|
+        .panel
+          %h4.bold= "Proposal ##{i}: #{p.title}"
+          %h6= "Created: #{p.created_at}"
+          %p= p.proposal
+        - i += 1
