--- a/app/views/groups/_groups_table.haml
+++ b/app/views/groups/_groups_table.haml
@@ -9,7 +9,7 @@
   %tbody
     - groups.each do |group|
       %tr
-        %td= link_to group.name, group_path(group)
+        %td= link_to group.try(:name), group_path(group)
         %td
           - group.group_memberships.each do |gm|
             %li= link_to gm.student.name, student_path(gm.student)
