Should probably only show submission button if assignment accepts submissions

--- a/app/views/assignments/_description_and_downloads.haml
+++ b/app/views/assignments/_description_and_downloads.haml
@@ -7,7 +7,7 @@
   .italic= "Opens: #{@assignment.open_at}" if @assignment.open_at?
   .italic= "Due: #{@assignment.due_at}" if @assignment.due_at?
 
-  - if current_student.present?
+  - if current_student.present? && @assignment.accepts_submissions? 
     = render "students/submissions", assignment: @assignment
 
   - if @assignment.student_logged? && @assignment.open? && current_user_is_student?
