--- a/app/views/grades/analytics/_group_analytics.haml
+++ b/app/views/grades/analytics/_group_analytics.haml
@@ -20,7 +20,7 @@
     - if @assignment.accepts_submissions? && @assignment.submissions.present?
       %br
       %h4.bold Participants
-      #numberComplete{:"data-type" => "full", "data-info" => "#{(term_for :groups).titleize} Submitted", "data-percent" => "#{@assignment.group_submission_rate(current_course)}", "data-fgcolor" => "#61a9dc", "data-bgcolor" => "#333333", "data-text" => "#{@assignment.submissions.count}", "data-dimension" => "180", "data-fontsize" => "38", "data-border" => "#222222", "data-bordersize" => "2"  }
+      #numberComplete{:"data-type" => "full", "data-info" => "#{(term_for :groups).titleize} Submitted", "data-percent" => "#{@assignment.submission_rate(current_course)}", "data-fgcolor" => "#61a9dc", "data-bgcolor" => "#333333", "data-text" => "#{@assignment.submissions.count}", "data-dimension" => "180", "data-fontsize" => "38", "data-border" => "#222222", "data-bordersize" => "2"  }
 
     %h4.bold Percentage Scores Earned
     - if current_user_is_staff? || ( current_user_is_student? && current_student.grade_released_for_assignment?(@assignment).present?)
