--- a/app/views/students/sidebar/_sidebar_earned_points_and_level.haml
+++ b/app/views/students/sidebar/_sidebar_earned_points_and_level.haml
@@ -8,8 +8,6 @@
     Current Level:
     %span.bold= current_student.grade_level_for_course(current_course)
   / - cache multi_cache_key :student_sidebar_total_score, current_student, current_course do
-  - scores = current_student.total_scores_for_chart(current_course)
+  - scores = total_scores_for_chart current_student, current_course
   #data-predictor{'data-predictor' =>  scores.to_json}
   .chart#userBarTotal
-  #{scores}
-
