WIP: custom sort for assignments

--- a/app/views/students/syllabus/_assignments.haml
+++ b/app/views/students/syllabus/_assignments.haml
@@ -28,7 +28,7 @@
         %p.description= raw assignment_type.description
 
       // Display the assignments for each assignment type in a responsive table, below header.
-      %table
+      %table.default_assignments_dynatable
         %thead
           %tr
             %th
