Grades group show presenter implementation

--- a/app/views/assignments/_view_assignment_grades.html.haml
+++ b/app/views/assignments/_view_assignment_grades.html.haml
@@ -29,11 +29,11 @@
       - if presenter.rubric_available? && presenter.grades_available_for?(current_student)
         #tab2= render partial: 'assignments/rubric_preview', locals: { presenter: presenter }
       - if presenter.has_submission_for?(current_student)
-        #tab3= render "submissions/student_show", locals: { presenter: presenter }
+        #tab3= render partial: "submissions/student_show", locals: { presenter: presenter }
       - if presenter.grades_available_for?(current_student)
         #tab4
           - if presenter.assignment.has_groups?
-            = render "grades/group_show"
+            = render partial: "grades/group_show", locals: { presenter: presenter }
           - else
             = render "grades/individual_show"
         - if !presenter.hide_analytics?
