--- a/app/views/grades/_group_show.html.haml
+++ b/app/views/grades/_group_show.html.haml
@@ -1,41 +1,37 @@
-- if current_user_is_student?
-  - @group = current_student.group_for_assignment(@assignment)
-- if @group.present?
+- if presenter.group_for(current_user).present?
   %p
     %span.bold= "#{(term_for :group).titleize}:"
-    - if current_user_is_student?
-      - @group = current_student.group_for_assignment(@assignment)
-    - if @group.present?
-      = link_to @group.name, group_path(@group)
-      = link_to "Edit", edit_group_path(@group), :class => 'button'
+    - if presenter.group_for(current_user).present?
+      = link_to presenter.group_for(current_user).name, group_path(presenter.group_for(current_user))
+      = link_to "Edit", edit_group_path(presenter.group_for(current_user)), :class => 'button'
 
     .clear
 
     %span.bold= "#{term_for :students}:"
     %ul
-      - @group.students.each do |student|
+      - presenter.group_for(current_user).students.each do |student|
         - if current_user_is_student?
           %li= student.name
         - else
           %li= link_to student.name, student_path(student)
 
       - if current_user_is_staff?
-        - if @group.grades.graded_or_released.present?
-          = link_to "Edit Grade", group_grade_assignment_path(@assignment, :group_id => @group), :class => 'button'
+        - if presenter.group_for(current_user).grades.graded_or_released.present?
+          = link_to "Edit Grade", group_grade_assignment_path(presenter.assignment, :group_id => presenter.group_for(current_user)), :class => 'button'
 
   - if current_user_is_student?
-    - if current_student.grade_for_assignment(@assignment).present?
+    - if presenter.grade_for(current_student).present?
       - if current_user_is_student?
         %p.bold Your Results
       - else
         %p.bold
-          #{current_student.try(:first_name)}'s Grade
-          %span= link_to "Edit", edit_assignment_grade_path(@assignment, :student_id => current_student.id), :class => 'button'
+          #{current_student.first_name}'s Grade
+          %span= link_to "Edit", edit_assignment_grade_path(presenter.assignment, :student_id => current_student.id), :class => 'button'
 
-      - grade = current_student.grade_for_assignment(@assignment)
+      - grade = presenter.grade_for(current_student)
       %p
         %span.bold= "#{points grade.raw_score }"
-        %span=" / #{points @assignment.point_total } possible points"
+        %span=" / #{points presenter.assignment.point_total } possible points"
       - if grade.assignment.release_necessary? && current_user_is_staff?
         %p
           Status:
@@ -44,24 +40,24 @@
         %p.bold Instructor Feedback:
         %p= raw grade.feedback
 
-      = render partial: "grades/request_feedback", locals: { grade: grade, assignment: @assignment }
+      = render partial: "grades/request_feedback", locals: { grade: grade, assignment: presenter.assignment }
 
   - else
-    - @group.students.each do |student|
+    - presenter.group_for(current_user).students.each do |student|
       .panel
-        - if student.grade_for_assignment(@assignment).present?
+        - if presenter.grade_for(student).present?
           %p.bold
-            #{student.try(:first_name)}'s Grade
-            = link_to "Edit #{student.try(:first_name)}'s Grade", edit_assignment_grade_path(@assignment, :student_id => student.id), :class => 'button'
+            #{student.first_name}'s Grade
+            = link_to "Edit #{student.first_name}'s Grade", edit_assignment_grade_path(presenter.assignment, :student_id => student.id), :class => 'button'
 
-          - grade = student.grade_for_assignment(@assignment)
+          - grade = presenter.grade_for(student)
           %p
             %span.bold= "#{points grade.raw_score }"
-            %span=" / #{points @assignment.point_total } possible points"
-          - if student.grade_for_assignment(@assignment).assignment.release_necessary?
+            %span=" / #{points presenter.assignment.point_total } possible points"
+          - if presenter.grade_for(student).assignment.release_necessary?
             %p
               Status:
-              %span.bold= student.grade_for_assignment(@assignment).status
-          - if student.grade_for_assignment(@assignment).feedback.present?
+              %span.bold= presenter.grade_for(student).status
+          - if presenter.grade_for(student).feedback.present?
             %p.bold Instructor Feedback:
-            %p= raw student.grade_for_assignment(@assignment).feedback
+            %p= raw presenter.grade_for(student).feedback
