--- a/app/views/grades/_individual_show.html.haml
+++ b/app/views/grades/_individual_show.html.haml
@@ -1,43 +1,43 @@
-- if current_student.grade_released_for_assignment?(@assignment).present? || current_user_is_staff?
+- if presenter.grades_available_for?(current_student)
   - if current_user_is_staff?
-    %h4.sr-only #{current_student.try(:first_name)}'s Grade
+    %h4.sr-only #{current_student.first_name}'s Grade
     %p.bold
-      #{current_student.try(:first_name)}'s Grade
+      #{current_student.first_name}'s Grade
       %span
-        %a{:href => "#{edit_assignment_grade_path(@assignment)}?student_id=#{current_student.id}", :class => 'button'  }
+        %a{:href => "#{edit_assignment_grade_path(presenter.assignment)}?student_id=#{current_student.id}", :class => 'button'  }
           Edit
-          %span.sr-only #{current_student.try(:first_name)}'s Grade
+          %span.sr-only #{current_student.first_name}'s Grade
 
-  - grade = current_student.grade_for_assignment(@assignment)
+  - grade = presenter.grade_for(current_student)
   - if grade
     %p
       - if grade.pass_fail_status
         %span You
-        %span.bold= "#{ term_for(grade.pass_fail_status) }"
-        %span= "the #{ term_for :assignment}."
+        %span.bold= "#{term_for(grade.pass_fail_status)}"
+        %span= "the #{term_for :assignment}."
       - elsif grade.score.present?
         %span You earned
-        %span.bold= "#{points grade.try(:raw_score) }"
-        %span=" out of #{points @assignment.point_total } possible points."
+        %span.bold= "#{points grade.raw_score }"
+        %span=" out of #{points presenter.assignment.point_total } possible points."
 
-    - if @assignment.release_necessary? && current_user_is_staff?
+    - if presenter.assignment.release_necessary? && current_user_is_staff?
       %p
         %span.small_uppercase Status:
-        %span.bold= current_student.grade_for_assignment(@assignment).status
+        %span.bold= grade.status
     - if grade.feedback.present?
       %span.small_uppercase Your Feedback:
-      %p= raw current_student.grade_for_assignment(@assignment).feedback
+      %p= raw grade.feedback
     - if grade.grade_files.present?
       %hr
       %h4.uppercase Attachments from Grader
       %ul#uploaded_files
         - grade.grade_files.each do |gf|
           %li
-            = link_to gf.try(:filename), gf.try(:url), :target => "_blank"
+            = link_to gf.filename, gf.url, :target => "_blank"
 
-  - if @assignment.rubric and @assignment.rubric.designed?
-    .rubric-container= render 'grades/rubric_grade_results'
+  - if presenter.rubric_available?
+    .rubric-container= render partial: 'grades/rubric_grade_results', locals: { presenter: presenter }
 
   .right
     %br
-    = render partial: "grades/request_feedback", locals: { grade: grade, assignment: @assignment }
+    = render partial: "grades/request_feedback", locals: { grade: grade, assignment: presenter.assignment }
