--- a/app/views/assignments/individual/_table_head.html.haml
+++ b/app/views/assignments/individual/_table_head.html.haml
@@ -12,7 +12,7 @@
     %th{:scope => "col"} Multiplied Score
   - elsif presenter.assignment.pass_fail?
     %th{:scope => "col"} Grade
-  - if @assignment.has_levels?
+  - if presenter.assignment.has_levels?
     %th Level Earned
 
   %th{:scope => "col"} Read?
