Add presenter to grades#show since it uses the group show and individual show partials for grades

--- a/app/views/grades/show.html.haml
+++ b/app/views/grades/show.html.haml
@@ -4,9 +4,7 @@
 
 .pageContent
   = render 'layouts/alerts'
-  
   - if @assignment.is_individual?
-    = render "individual_show"
-
+    = render partial: "individual_show", locals: { presenter: presenter }
   - else
-    = render "group_show"
+    = render partial: "group_show", locals: { presenter: presenter }
