Forced width of comment box

--- a/app/assets/stylesheets/_buttons_and_icons.sass
+++ b/app/assets/stylesheets/_buttons_and_icons.sass
@@ -12,6 +12,7 @@
   cursor: pointer
   background-color: $color-blue-1
   white-space: nowrap
+  font-weight: normal
 
   &:hover
     background-color: $color-blue-0
