--- a/app/assets/stylesheets/_rubrics.sass
+++ b/app/assets/stylesheets/_rubrics.sass
@@ -345,6 +345,8 @@ button.delete
     background-color: $color-grey-4
     border: none
     padding: .25rem
+    font-size: .8rem
+    min-width: 300px
 
     textarea
       margin: 0
