--- a/app/views/grades/_rubric_edit.html.haml
+++ b/app/views/grades/_rubric_edit.html.haml
@@ -1,10 +1,10 @@
 .pageContent
   #rubric-grader(ng-app="gradecraft" ng-controller="GradeRubricCtrl" ng-init="init(#{@rubric[:id]}, #{@assignment[:id]}, #{params[:student_id]}, #{@rubric_grades}, \"#{@grade.status if @grade}\", #{@assignment.release_necessary?})")
     .row
-      #rubric-heading.small-7.columns
+      #rubric-heading.columns
         %h3.text-right
           Grade Assignment by Rubric
-          = link_to "(Edit)", design_assignment_rubric_path(@assignment)
+          = link_to "Edit Rubric", design_assignment_rubric_path(@assignment), :class => "button"
         %h4.text-right (click to select the level earned for each criterion)
         %br
 
