Remove extra froala file, switch all lighten and darken to base color

--- a/app/assets/stylesheets/_alerts.sass
+++ b/app/assets/stylesheets/_alerts.sass
@@ -1,21 +1,20 @@
 .alert-box
   padding: .25rem .5rem !important
   background-color: $color-blue-5
-  color: #FFF
+  color: $color-white
   border-radius: $global-radius
   margin-bottom: 1rem
 
   a.close
-    color: #FFF
+    color: $color-white
     float: right
     margin-top: .25rem
     font-size: 1rem !important
     font-weight: bold
     line-height: 1
-    color: #FFF
 
     &:hover, &:focus
-      color: #000000
+      color: $color-black
       text-decoration: none
       cursor: pointer
   &.alert
