--- a/app/assets/stylesheets/_context_menu.sass
+++ b/app/assets/stylesheets/_context_menu.sass
@@ -21,10 +21,10 @@
       display: inline-block
       font-size: .9rem
       border-radius: 0 !important
-      color: #000
+      color: $color-black
       border-right: 1px solid $color-green-3
       border-left: 1px solid $color-green-3
       & > a 
-        color: #FFF
+        color: $color-white
       &:hover
-        background-color: darken($color-green-1, 20%)
+        background-color: $color-green-1
