--- a/app/assets/stylesheets/_layout.sass
+++ b/app/assets/stylesheets/_layout.sass
@@ -23,17 +23,17 @@ body
 
 .pageContent
   padding: 1rem
-  background-color: #FFF
+  background-color: $color-white
 
 .student.mainContent
   width: calc(100% - 330px)
   float: left
-  background-color: #FFF
+  background-color: $color-white
   opacity: .9
 
 
 .footer
-  color: #FFF
+  color: $color-white
   margin: 0 auto
   width: 39rem
   clear: both
@@ -53,7 +53,7 @@ body
       padding: 0
       list-style-type: none
       a
-        color: #FFF
+        color: $color-white
         &:hover
           color: $color-blue-0
 .pageContainer
@@ -74,7 +74,7 @@ body
   float: left
 
 .footer
-  color: #FFF
+  color: $color-white
   margin: 0 auto
   width: 39rem
   clear: both
@@ -94,7 +94,7 @@ body
       padding: 0
       list-style-type: none
       a
-        color: #FFF
+        color: $color-white
         &:hover
           color: $color-blue-0
 
@@ -126,7 +126,7 @@ form .tabs-content .content
   padding: 1rem
 
 hr.dotted
-  border-color: #FFF
+  border-color: $color-white
   border: 0
   border-bottom: 1px dashed $color-green-3
 
@@ -151,12 +151,12 @@ a:hover + .display_on_hover
   width: 250px
   font-size: .9rem
   background-color: $color-green-3
-  color: #FFF
+  color: $color-white
   border-radius: $global-radius
   z-index: 10
 
   h6 
-    color: #FFF
+    color: $color-white
     font-weight: bold
 
   ul
@@ -164,7 +164,8 @@ a:hover + .display_on_hover
     padding: 0
 
     li 
-      color: #FFF
+      color: $color-white
+
       display: block
       clear: both
 
