--- a/app/assets/stylesheets/_ribbon_mixins.sass
+++ b/app/assets/stylesheets/_ribbon_mixins.sass
@@ -3,7 +3,7 @@
   width: 18px
   position: absolute
   top: 26px
-  color: #fff
+  color: $color-white
   padding: 8px 0 0 0
   margin-left: 8px
   height: 32px
