--- a/app/assets/stylesheets/_staff_sidebar.sass
+++ b/app/assets/stylesheets/_staff_sidebar.sass
@@ -53,20 +53,20 @@
 
     a
       display: block !important
-      color: #FFF
+      color: $color-white
       padding: 0.15rem 
       font-weight: normal
       text-decoration: none
 
     a:hover, a:focus
       background-color: $color-blue-1 !important
-      color: #FFF
+      color: $color-white
 
   /* Spacing the list divider */
   hr
     margin: .75rem auto
     border: 0
-    border-bottom: 1px dashed #FFF
+    border-bottom: 1px dashed $color-white
     width: 78%
 
 @media (max-width: $media-small-max)
