--- a/app/assets/stylesheets/_student_dashboard.sass
+++ b/app/assets/stylesheets/_student_dashboard.sass
@@ -20,15 +20,15 @@ img.earned
   padding-top: .5rem
   border: 1px solid $color-grey-3
   border-radius: 25px
-  background-color: #eee
+  background-color:$color-grey-4
   border-collapse: true
 
 .bar_magic.success
-  color: #FFF
+  color: $color-white
   background-color: $color-green-3
 
   .has-tip
-    color: #FFF
+    color: $color-white
 
 p.predictor-description
   margin: 0.25rem 0 .5rem
