--- a/app/assets/stylesheets/_student_subnav.sass
+++ b/app/assets/stylesheets/_student_subnav.sass
@@ -36,17 +36,17 @@
       text-transform: capitalize
       a
         padding: 1em
-        color: #FFF
+        color: $color-white
     li.active
       padding: .5rem .75rem !important
 
     li a:hover, li:hover a
-      color: #000
+      color: $color-black
 
 /* Setting the active tab and hover color */
 .navbar-nav li.active, .sub-nav .navbar-nav li:hover
   background-color: $color-yellow-1
-  color: #000 !important
+  color: $color-black!important
 
 li .announcement-notification-badge
   position: relative
