--- a/app/assets/stylesheets/_timeline_overrides.sass
+++ b/app/assets/stylesheets/_timeline_overrides.sass
@@ -1,5 +1,5 @@
 .nav-next:hover, .nav-previous:hover
-  background-color: #000
+  background-color: $color-black
   opacity: .75
   border-radius: .5rem
   
@@ -20,16 +20,16 @@
     width:50%
     top:80%
     max-width:300px
-    background: #FFF
-    -webkit-box-shadow:0 15px 10px #FFF
-    -moz-box-shadow:0 15px 10px #FFF
-    box-shadow:0 15px 10px #FFF
+    background: $color-white
+    -webkit-box-shadow:0 15px 10px $color-white
+    -moz-box-shadow:0 15px 10px $color-white
+    box-shadow:0 15px 10px $color-white
 
   .vco-storyjs img
     border: 0
 
   .vco-storyjs ul, .vco-storyjs ol
-    color: #666666
+    color: $color-grey-2
     padding: 0 1.25rem
 
     li
