--- a/app/assets/stylesheets/_badges.sass
+++ b/app/assets/stylesheets/_badges.sass
@@ -1,8 +1,9 @@
+/* used on the badge show page */ 
 .badge-image
   float: left
   position: relative
   width: 6.25rem
-  background-color: lighten($color-blue-3, 20%)
+  background-color: $color-blue-3
   padding: 1rem
   height: 6rem
 
@@ -10,7 +11,7 @@
   float: left
   width: 20rem
   height: 8rem
-  background-color: lighten($color-yellow-1, 20%)
+  background-color: $color-yellow-1
 
 .badge-icon
   width: 80%
