--- a/app/assets/stylesheets/_forms.sass
+++ b/app/assets/stylesheets/_forms.sass
@@ -24,7 +24,7 @@ fieldset
   padding: 0
 
 select, .ui-tabs-panel select
-  background-color: #FFF
+  background-color: $color-white
   padding: .5rem !important
   width: 16rem
   height: 2.25rem
@@ -32,7 +32,7 @@ select, .ui-tabs-panel select
   font-family: Avenir, sans-serif
 
 select:hover
-  background-color: lighten($color-blue-4, 15%)
+  background-color: $color-blue-4
 
 .dropdown-menu
   position: absolute
@@ -42,7 +42,7 @@ select:hover
   display: none
   float: left
   padding: 5px
-  background-color: lighten($color-blue-0, 70%)
+  background-color: $color-blue-5
   margin: 2px 0 0
   font-size: 14px
   list-style: none
@@ -62,7 +62,7 @@ select:hover
 
   li:hover, li.active a, li.active
     background-color: $color-blue-0
-    color: #fff !important
+    color: $color-white !important
 
   &.course-result
     top: 5.1rem;
@@ -143,7 +143,7 @@ ul.accepts_submission_types
   font-style: italic
   background-color: $alert-color
   border-radius: $global-radius
-  color: #FFF
+  color: $color-white
   padding: .3rem .7rem
 
 .inline-list > li > *
@@ -198,7 +198,7 @@ ul.accepts_submission_types
 .ui-datepicker
   margin-top: -2.7rem !important
   background-color: $color-blue-4
-  border: 1px solid #CCC !important
+  border: 1px solid $color-grey-3 !important
 
 .grade-scheme-row
   background-color: $color-grey-4
