--- a/app/assets/stylesheets/_grades.sass
+++ b/app/assets/stylesheets/_grades.sass
@@ -8,7 +8,7 @@ select#grade_raw_score, input[type=text]#grade_raw_score
 
 select#grade_raw_score[disabled], input[type=text]#grade_raw_score[disabled]
   background: #dedede !important
-  color: #555
+  color: $color-grey-2
   cursor: pointer
   cursor: hand
 
@@ -16,25 +16,25 @@ select#grade_raw_score[disabled], input[type=text]#grade_raw_score[disabled]
   display: block
   padding: 8px 16px
   margin: 8px
-  border: 1px solid #888
+  border: 1px solid $color-grey-2
   float: left
 
   &.deleting
-    background: red !important
-    color: white !important
+    background: $color-red-1 !important
+    color: $color-white !important
 
     h4
-      color: white !important
+      color: $color-white !important
   
   &.creating
-    background: green !important
-    color: white !important
+    background: $color-green-2 !important
+    color: $color-white !important
 
     h4
-      color: white !important
+      color: $color-white !important
 
   &.creating.deleting
-    background: black !important
+    background: $color-black !important
 
   .info
     display: block
@@ -44,20 +44,14 @@ select#grade_raw_score[disabled], input[type=text]#grade_raw_score[disabled]
 
 
 label.disabled
-  color: #888 !important
-
-.animalbox
-  width: 100px
-  height: 200px
-  background: yellow
-  border: 1px solid #999
+  color: $color-grey-3 !important
 
 #updated-at, #updated-at-current
   margin-top: 12px
   font-style: italic
   float: left
   padding: 1px 5px
-  border: 1px solid #F2F2F2
+  border: 1px solid $color-grey-4
   @include rounded-corners(4px)
 
 #updated-at-current
@@ -66,17 +60,12 @@ label.disabled
   @include transition-timing-function(ease)
 
   &.ng-animate
-    background: #F5FCA1
-    border-color: #E8F08F
+    background: $color-white
+    border-color: $color-grey-4
 
-#available
+#available, #awarded
   padding: 1rem
-  background-color: lighten($color-green-3, 40%)
-  min-height: 300px
-
-#awarded
-  background-color: lighten($color-green-3, 20%)
-  padding: 1rem
+  background-color: $color-green-3
   min-height: 300px
 
 .gradebox
@@ -98,15 +87,15 @@ label.disabled
   &.inactive
     @include opacity(0.4)
     border: 1px solid #B9DAE2
-    color: #87ADB5
+    color: $color-grey-6
     padding: .4rem
     font-size: 12px
     cursor: pointer
     cursor: hand
 
   &.jump-left
-    color: red !important
-    background: red !important
+    color: $color-red-1 !important
+    background: $color-red-1 !important
     float: left
     transition: all 0.5s linear
     opacity: 0
@@ -129,7 +118,7 @@ button#remove-badges, button#add-badges
 
   &:hover
     @include opacity(1)
-    background: #d64b4b - #111
+    background: $color-red-2 - $color-grey-1
 
 .grade-badge
   &.hexagon
@@ -144,9 +133,8 @@ button#remove-badges, button#add-badges
     height: 36px
     float: left
     z-index: 100
-    background-color: #3277BE
+    background-color: $color-blue-1
     margin: 2rem 3rem 3rem 2rem
-    box-shadow: 0 0 10px rgba(12, 40, 44, 0.55)
     border-left: solid 1px #0C58A7
     border-right: solid 1px #0C58A7
 
@@ -331,7 +319,7 @@ button#remove-badges, button#add-badges
     top: 0
     right: 4px
     font-weight: bold
-    color: black
+    color: $color-black
     text-align: center
     width: 100%
     font-size: 0.9rem
@@ -342,7 +330,7 @@ button#remove-badges, button#add-badges
     height: 35px
 
     &.unearned
-      background: #999
+      background: $color-grey-6
       display: none
 
   .gold-stars
@@ -365,18 +353,18 @@ button#remove-badges, button#add-badges
 
   &.unearned
     .badges-earned
-      background-color: #999999
+      background-color: $color-grey-6
       background-repeat: repeat-x
-      background-image: -khtml-gradient(linear, left top, left bottom, from(#666666), to(#999999))
-      background-image: -moz-linear-gradient(top, #666666, #999999)
-      background-image: -ms-linear-gradient(top, #666666, #999999)
-      background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #666666), color-stop(100%, #999999))
-      background-image: -webkit-linear-gradient(top, #666666, #999999)
-      background-image: -o-linear-gradient(top, #666666, #999999)
-      background-image: linear-gradient(top, #666666, #999999)
-      filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#666666', endColorstr='#999999', GradientType=0)
+      background-image: -khtml-gradient(linear, left top, left bottom, from($color-grey-2), to($color-grey-6))
+      background-image: -moz-linear-gradient(top, $color-grey-2, $color-grey-6)
+      background-image: -ms-linear-gradient(top, $color-grey-2, $color-grey-6)
+      background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, $color-grey-6), color-stop(100%, $color-grey-6))
+      background-image: -webkit-linear-gradient(top, $color-grey-2, $color-grey-6)
+      background-image: -o-linear-gradient(top, $color-grey-2, $color-grey-6)
+      background-image: linear-gradient(top, $color-grey-2, $color-grey-6)
+      filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='$color-grey-2', endColorstr='$color-grey-6', GradientType=0)
       &:after
-        border-color: #999999 #999999 transparent #999999
+        border-color: $color-grey-6 $color-grey-6 transparent $color-grey-6
 
 
   .earned-total
@@ -414,7 +402,7 @@ button#remove-badges, button#add-badges
 
   &.jump-left
     color: red !important
-    background: red !important
+    background: $color-red-1 !important
     float: left
     transition: all 0.5s linear
     opacity: 0
