--- a/app/assets/stylesheets/_student_sidebar.sass
+++ b/app/assets/stylesheets/_student_sidebar.sass
@@ -3,7 +3,7 @@
   margin-top: 0rem
   padding: 1rem
   background-color: $color-blue-0
-  color: #FFF
+  color: $color-white
   opacity: .9
   float: left
   border-left: 1px dashed $color-blue-0
@@ -30,7 +30,7 @@
   hr
     margin: .25rem 0
     border: 0
-    border-bottom: 1px dashed #FFF
+    border-bottom: 1px dashed $color-white
 
   h3
     margin: 0
